Version 1.4.1
- NEW: TortoiseMerge can now handle files with CR lineendings. (Stefan)
- CHG: If a bug ID is specified multiple times in a log message, the log
       dialog now shows each ID only once in the bug ID column. (Stefan)
- CHG: The bug ID column in the log dialog is now shown if the
       bugtraq:url is empty but the bugtraq:logregex is set. (Stefan)
- CHG: When ignoring file(s) failed, the error message from Subversion is
       shown in full instead of just the simple message telling that it
       failed. (Stefan)
- BUG: When the bugtraq:message was set to "%BUGID%" only and the 
       bugtraq:number was set to "true", the log message from the
       'recent log messages' was inserted into the bug ID field instead of
       the log message field in the commit dialog. (Stefan)
- BUG: When saving a property over an existing and in-use file an exception
       was thrown. (Stefan)
- BUG: When columns were hidden in the various dialogs using the status
       control, the redrawing on the right end was sometimes wrong.
       See issue #293 for details. (Stefan)
- BUG: The bugtraq:regex parsing was wrong if the group object was not
       the last in the string. See issue #295 for details. (Stefan)
- BUG: Showing the changes done in a revision of a renamed file in
       the revision of the rename could fail for unified diffs. (Stefan)
- BUG: The log dialog could crash when trying to show a log message with a
       bug ID and an illegal regex string. (Stefan)
- BUG: When the status fetching in the action dialog was cancelled a race
       condition could occur which lead to a crash. (Stefan)
- BUG: Fonts overlapped in the TSVNCacheWindow when larger than 15 points
       (Masaru Tsuchiyama)
- BUG: The actions from the context menu in the progress dialog could
       use relative paths if the current directory was inside the
       working copy. (Stefan)
- BUG: The exporting options didn't always work correctly with externals.